--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="empty_search_result">暂无数据</string>
     <string name="hint_input_project">请输入工程</string>
     <string name="hint_input_tower">请输入塔型</string>
+    <string name="filter">筛选</string>
 
 </resources>
