--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="hint_input_project">请输入工程</string>
     <string name="hint_input_tower">请输入塔型</string>
     <string name="filter">筛选</string>
+    <string name="linear_layout_manager">LinearLayoutManager</string>
+    <string name="title_tower_part_activity">工艺卡列表</string>
 
 </resources>
