--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">工艺切片文件查看器</string>
+    <string name="task_list">计划号列表</string>
     <string name="title_activity_initialization">设置端口</string>
     <string name="ok">确定</string>
     <string name="empty_search_result">暂无数据</string>
