--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="search">搜索</string>
     <string name="input_part_id">请输入件号</string>
     <string name="image_index">共%1$d件，第%2$d件</string>
+    <string name="download">下载</string>
+    <string name="settings">设置</string>
 
 </resources>
