filter fragment add unlimited

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="input_name">请输入用户名</string>
     <string name="input_password">请输入密码</string>
     <string name="save">保存</string>
+    <string name="unlimited">不限</string>
 
     <array name="task_option">
         <item>激活</item>
